# build-your-own-interpreter

./: .gitignore  README.md  course-definition.yml  starter-repository-definitions.yml
compiled_starters/ocaml/: README.md  dune-project
compiled_starters/ocaml/.codecrafters/: compile.sh  run.sh
compiled_starters/ocaml/src/: main.ml
dockerfiles/: c-23.Dockerfile  c-9.2.Dockerfile  cpp-23.Dockerfile  dotnet-8.0.Dockerfile  dotnet-9.0.Dockerfile  go-1.19.Dockerfile  go-1.22.Dockerfile  haskell-9.10.Dockerfile  node-20.Dockerfile  nodejs-20.Dockerfile  ocaml-5.2.0.Dockerfile  ocaml-5.3.Dockerfile  ocaml-5.4.Dockerfile  php-8.4.Dockerfile  python-3.11.Dockerfile  python-3.12.Dockerfile  python-3.13.Dockerfile  rust-1.70.Dockerfile  rust-1.77.Dockerfile  rust-1.80.Dockerfile  scala-3.8.Dockerfile  swift-6.0.Dockerfile  zig-0.12.Dockerfile  zig-0.13.Dockerfile  zig-0.15.Dockerfile
stage_descriptions/: base-01-ry8.md  base-02-ol4.md  base-03-oe8.md  base-04-xc5.md  base-05-ea6.md  base-06-mp7.md  base-07-bu3.md  base-08-et2.md  base-09-ml2.md  base-10-er2.md  base-11-tz7.md  base-12-ue7.md  base-13-kj0.md  base-14-ey7.md  base-15-pq5.md  classes-01-vf4.md  classes-02-yk8.md  classes-03-yf3.md  classes-04-qr2.md  classes-05-yd7.md  classes-06-dg2.md  classes-07-ou5.md  classes-08-eb9.md  control-flow-01-ne3.md  control-flow-02-st5.md  control-flow-03-fh8.md  control-flow-04-xj4.md  control-flow-05-wk8.md  control-flow-06-jx4.md  control-flow-07-qy3.md  control-flow-08-bw6.md  control-flow-09-vt1.md  evaluating-expressions-01-iz6.md  evaluating-expressions-02-lv1.md  (+50 more)
(+308 files in other folders)
